--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,10 +3,10 @@
     "browser": true,
     "es2021": true
   },
-  "extends": [
-    "bever",
-    "plugin:react/recommended"
-  ],
+  // "extends": [
+  //   "bever",
+  //   "plugin:react/recommended"
+  // ],
   "globals": {
     "ComponentFramework": true,
     "JSX": true
