--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pcf-fetch-to-subgrid",
+  "name": "gambito-fetch-xml-subgrid",
   "version": "1.0.0",
   "description": "This control converts a FetchXml string into a subgrid.",
   "scripts": {
@@ -10,14 +10,15 @@
     "refreshTypes": "pcf-scripts refreshTypes"
   },
   "dependencies": {
-    "@fluentui/react": "8.29.0",
+    "@fluentui/react": "^8.29.0",
+    "@types/react-dom": "^17.0.0",
     "react": "16.8.6",
     "react-dom": "16.8.6"
   },
   "devDependencies": {
     "@types/node": "^16.4.10",
     "@types/powerapps-component-framework": "^1.3.0",
-    "@types/react": "^16.8",
+    "@types/react": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.0",
     "@typescript-eslint/parser": "^4.29.0",
     "eslint": "^7.32.0",
